kube_deploy/dev/deploy-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: letter-app-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: letter-app-dev
  template:
    metadata:
      labels:
        app: letter-app-dev
    spec:
      containers:
        - name: letter-app-dev
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/cica/cica-repo-dev:latest
          imagePullPolicy: Always
          command: ["node", "main/server.js"]
          ports:
            - containerPort: 3300
