kube_deploy/dev/deploy-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: letter-worker-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: letter-worker-dev
  template:
    metadata:
      labels:
        app: letter-worker-dev
    spec:
      serviceAccountName: irsacls
      containers:
        - name: letter-worker-dev
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/cica/cica-repo-dev:latest
          imagePullPolicy: Always
          command: ["node", "worker/index.js"]
