kube_deploy/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: letter-app-dev
  labels:
    app: letter-app-dev
spec:
  selector:
    app: letter-app-dev
  ports:
    - name: http
      port: 80
      targetPort: 3300
